discussion/kv_engine/169495/169495_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49469: Introduce CheckpointManager::Counter::memFreedByExpel

Change-Id: I2846833f9a7fec99966a05f9ed0190f045e23f59

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-01-26 16:50:30.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-26 17:12:19.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15159/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:2039:41: error: no member named "Counter" in "Checkpoint" [clang-diagnostic-error]
CheckpointManager::Counter& Checkpoint::Counter::operator-=(size_t size) {
                                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15159/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:2039:41:
error: no member named "Counter" in "Checkpoint" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15159/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43336/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/checkpoint_manager.cc(2039): error C3083: "Counter": the symbol to the left of a "::" must be a type ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43336/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36610/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint_manager.cc:2039:41:
error: no member named "Counter" in "Checkpoint"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36610/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15972/ : FAILURE

Compile error at [2022-01-26T17:07:12.740Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@6/kv_engine/engines/ep/src/checkpoint_manager.cc:2039:41:
error: no member named "Counter" in "Checkpoint"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15972/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17931/ : FAILURE

Compile error at [2022-01-26T17:06:23.678Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/checkpoint_manager.cc:2039:41:
error: no member named "Counter" in "Checkpoint"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17931/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4808/ : FAILURE

Compile error at [2022-01-26T17:07:03.188Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/checkpoint_manager.cc:2039:41:
error: no member named "Counter" in "Checkpoint"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4808/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4869/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17173/ : FAILURE

Compile error at [2022-01-26T17:07:18.088Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/checkpoint_manager.cc:2039:41:
error: ?Checkpoint::Counter? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17173/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16858/ : FAILURE

Compile error at [2022-01-26T17:08:50.054Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/checkpoint_manager.cc:2039:41:
error: ?Checkpoint::Counter? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16858/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25273/ : FAILURE

Compile error at [2022-01-26T17:09:51.766Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master@2/kv_engine/engines/ep/src/checkpoint_manager.cc:2039:41:
error: no member named "Counter" in "Checkpoint"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25273/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14003/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
